<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:autofillHints="@string/et_firstName_edit"
    android:orientation="horizontal"
    tools:context=".EditActivity">

    <ImageView
        android:id="@+id/iv_profile_edit"
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_lastName_edit"
        app:srcCompat="@mipmap/ic_launcher" />

    <RadioGroup
        android:id="@+id/rg_gender_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_profile_edit">

        <RadioButton
            android:id="@+id/rb_Male_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_Male_text" />

        <RadioButton
            android:id="@+id/rb_Female_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_Female_text" />
    </RadioGroup>

    <Button
        android:id="@+id/button_Save_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/button_Save_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg_gender_edit" />

    <EditText
        android:id="@+id/et_firstName_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/et_firstName_hint"
        android:inputType="textPersonName"
        android:text="@string/et_firstName_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_lastName_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/et_lastName_hint"
        android:inputType="textPersonName"
        android:text="@string/et_lastName_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_firstName_edit" />
</androidx.constraintlayout.widget.ConstraintLayout>